--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -147,3 +147,45 @@
   width: 1877px;
   max-width: none;
 }
+
+.btn:hover {
+  color: #9AB09C;
+  background-color: white;
+}
+
+.arrow {
+  position: absolute;
+    bottom: 70px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
+    border-bottom: 4px solid #000;
+    border-right: 4px solid #000;
+    z-index: 9;
+    left: calc(50% - 15px);
+    transform: translate(-50%, 0%) rotate(45deg);
+    animation: fade_move_down 2s ease-in-out infinite;
+}
+
+.portada {
+  animation: fadeIn ease 4s;
+}
+
+@keyframes fade_move_down {
+  0% {
+    transform: translate(0,-10px) rotate(45deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+  
+  100% {
+    transform: translate(0,10px) rotate(45deg);
+    opacity: 0;
+  }
+}
